syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}

  //GetRace will return one race by id
  rpc GetRace(GetRaceRequest)  returns (GetRaceResponse) {}
}

// Request GetRace
message GetRaceRequest {
  string id =1;
}

// Response GetRace
message GetRaceResponse {
  Race race = 1;
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
  ListRacesRequestOrder order = 2;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  optional bool visible = 2;
}

// Order for listing races
message ListRacesRequestOrder {
  // Order by key
  string orderBy = 1;
  // OrderType : ASC or DESC
  string orderType = 2;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // All races that have an `advertised_start_time` in the past should reflect 'CLOSED'. Otherwise 'OPEN'
  string status = 7;
}

